# nittsu

./: Cargo.toml  Makefile
src/: kprint.rs  lib.rs  macros.rs  main.rs
src/boot/x86_64/: boot.asm  grub.cfg  multiboot_header.asm
src/hal/: ascii_text_display.rs  mod.rs  privelege.rs
src/hal/x86_64/: gdt.rs  mod.rs  vga.rs
src/hal/x86_64/interrupts/: idt.rs  mod.rs  pic.rs
src/hal/x86_64/ktty/: mod.rs  vga.rs
src/hal/x86_64/tasks/: mod.rs
src/ktty/: hardcoded.rs  mod.rs
